[package]
name = "monolith"
version = "0.1.0"
authors = ["zhongyang.wu <zhongyang.wu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
log = "0.4.8"
clap = "2.33.0"
sled = "0.22.1"
tempfile = "3.0.7"
criterion="0.3.0"
grpcio = "0.4"
protobuf = "2.10.2"




[[bench]]
name = "benchmark"
harness = false

