[package]
name = "monolith"
version = "0.0.1"
authors = ["zhongyang.wu <zhongyang.wu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
log = "0.4.8"
clap = "2.33.0"
sled = "0.22.1"
tempfile = "3.0.7"
criterion="0.3.0"
grpcio = "0.5.0"
protobuf = "2.8.0"
tiny_http = "0.6"
env_logger = "0.7.1"
snap = "1"
rayon = "1.3.0"
rand = "0.7.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tikv-client = { git = "https://github.com/tikv/client-rust" }

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", rev = "e624c1d48460940a40d8aa69b5329460d9af87dd" }

[[bench]]
name = "benchmark"
harness = false



