[package]
name = "monolith"
version = "0.0.1"
authors = ["zhongyang.wu <zhongyang.wu@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tommycpp/monolith.git"
keywords = ["timeseries", "tsdb", "prometheus", "sled"]
description = "timeseries database that could used as promtheus remote write endpoint, support both sled or tikv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
log = "0.4.8"
clap = "2.33.0"
sled = "0.22.1"
tempfile = "3.0.7"
criterion="0.3.0"
protobuf = "2.8.0"
tiny_http = "0.6"
crc = "1.8.1"
env_logger = "0.7.1"
snap = "1"
rayon = "1.3.0"
rand = "0.7.3"
serde_json = "1.0"
serde_yaml = "0.8"
futures = { version = "0.3.1", features = ["compat", "async-await", "thread-pool"] }
uuid = { version = "0.8", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
tikv-client = "0.1.0"


[dev-dependencies]
assert_cmd = "1.0.1"

[[bench]]
name = "benchmark"
harness = false



